Major changes mostly to the Expense Section in order to include the total amount of money spent on the Today's Expenses section as well as a bigger reform of the items which now present both the category (which is saving null, because we are ignoring it) as well as each single expense.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,10 @@
     <string name="title_activity_new_expense">New Expense</string>
     <string name="action_settings">Settings</string>
 
+    <!-- Expense Section -->
     <string name="todays_expenses">Today\'s Expenses:</string>
+    <string name="total_of_expenses">(Total: %1$s%2$s )</string>
+    <string name="expended_amount">%1$s%2$s</string>
 
     <!-- Reset Data Dialog -->
     <string name="warning">Warning:</string>
@@ -19,7 +22,7 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
 
-    <!-- Profile Settings -->
+    <!-- Profile Section -->
     <string name="give_us_feedback">Give us feedback</string>
     <string name="reset_data">Reset Data</string>
     <string name="export_data">Export Data</string>
